--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
   <body class="inner-page">
     <header class="main-header">
       <nav class="main-nav">
-				<div class="main-nav-logo-wrapper"
-        	<a class="main-nav-logo" href="index.html">
+				<div class="main-nav-logo-wrapper">
+					<a class="main-nav-logo" href="index.html">
 					<img src="img/logo.png" width="138" height="70" alt="Логотип Седона"></a>
 				</div>
         <ul class="site-nav">
