Сетки каталог первый вариант

--- a/catalog.html
+++ b/catalog.html
@@ -182,8 +182,10 @@
 	</main>
 	<footer class="footer-main">
       <div class="footer-container">
-        <a class="footer-main-button" href="#">#VisitSedona</a>
-        <div class="footer-social">
+				<div class="footer-column">
+					<a class="footer-main-button" href="#">#VisitSedona</a>
+				</div>
+        <div class="footer-column">
           <ul class="footer-list">
           
             <li><a class="social-button" href="#">
@@ -198,8 +200,8 @@
           
           </ul>
         </div>
-        <div class="footer-copyright">
-          <p>
+        <div class="footer-column">
+          <p class="footer-copyright">
           <a class="footer-copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss">
             <span>Website by </span>
             <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="footer-copyright-logo"></a>
