Исправил ошибки каталога

--- a/index (1).html
+++ b/index (1).html
@@ -156,6 +156,7 @@
           </div>
           <button type="submit" class="request-button">Найти</button>
         </form>
+        <button class="request-form-close" type="button">Закрыть</button>
       </div>
     </section>
   </main>
