--- a/index.html
+++ b/index.html
@@ -98,8 +98,6 @@
           </ul>
         </li>
       </ul>
-      https://www.google.ru/maps/place/Kimpton+Amara+Resort+and+Spa/@34.8579731,-111.8215135,15z/data=!4m17!1m9!2m8!1z0JPQvtGB0YLQuNC90LjRhtGL!3m6!1z0JPQvtGB0YLQuNC90LjRhtGL!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!3s0x872da132f942b00d:0x5548c523fa6c8efd!4m2!1d-111.7609896!2d34.8697395!3m6!1s0x872da3e251059e65:0x8e8cc925b289e6af!5m1!1s2018-04-01!8m2!3d34.8695643!4d-111.7584658
-      AIzaSyD28jvHAhSkViOZxoY957R26rmabRyQOXU
     </section>
     <section class="request">
       <div class="request-offer">
@@ -108,11 +106,11 @@
       </div>
       <a class="request-hotel-button" href="#">Поиск гостиницы в Седоне</a>
       <div class="request-map">
-            <h2 class="visually-hidden">Как нас найти</h2>
-            <p class="request-map active-map">
-<!--        <iframe src="https://www.google.ru/maps/place/%D0%A1%D0%B5%D0%B4%D0%BE%D0%BD%D0%B0,+%D0%90%D1%80%D0%B8%D0%B7%D0%BE%D0%BD%D0%B0+86336,+%D0%A1%D0%A8%D0%90/@34.8544438,-111.830158,13z/data=!3m1!4b1!4m5!3m4!1s0x872da132f942b00d:0x5548c523fa6c8efd!8m2!3d34.8697395!4d-111.7609896" width="1200" height="475" allowfullscreen></iframe>-->
-            <img class="map-image" src="img/mapjpg.jpg" width="1200" height="593" alt="Карта">
-            </p>
+        <h2 class="visually-hidden">Как нас найти</h2>
+        <p class="request-map active-map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13093.943207516195!2d-111.76627854447771!3d34.86914543572576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YHQtdC00L7QvdCwINGD0LjQvdGB0LvQvtCy!5e0!3m2!1sru!2sua!4v1522359794383" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <img class="map-image" src="img/mapjpg.jpg" width="1200" height="593" alt="Карта">
+        </p>
         <form class="request-form" action="https://echo.htmlacademy.ru" method="post">
           <div class="request-item request-wrapper">
             <label for="request-date">Дата заезда:</label>
@@ -162,11 +160,7 @@
           </div>
           <button type="submit" class="request-button">Найти</button>
         </form>
-        <button class="request-form-close" type="button">Закрыть</button>
-      </div>
-    </section>
-  </main>
-  <footer class="footer-main">
+         <footer class="footer-main footer-index">
     <div class="footer-column">
       <a class="footer-main-button" href="#">#VisitSedona</a>
     </div>
@@ -204,14 +198,23 @@
       </p>
     </div>
   </footer>
+      </div>
+    </section>
+  </main>
+
   <script>[].forEach.call(document.querySelectorAll("*"), function (a) { a.style.outline = "1px solid #" + (~~(Math.random() * (1 << 24))).toString(16) });
-  
-    var link=document.querySelector(".request-form-link");
+
+
+    // У вас был неверно написан селектор ссылки, которая открывает форму, после указания верно - показ формы заработал
+    var link=document.querySelector(".request-hotel-button");
 
     var popup=document.querySelector(".request-form");
-    var close=popup.querySelector(".request-form-close");
+    // var close=popup.querySelector(".request-form-close");
 
-    var form=popup.querySelector("form");
+
+    // Вы уже в переменную popup записали содержмиое формы. Уже не стоит пытатся дублировать ту же самую форму в переменную form
+    // var form=popup.querySelector("form");
+
     var datein=popup.querySelector("[name=date-in]");
     var dateout=popup.querySelector("[name=date-out]");
     var adults=popup.querySelector("[name=adults-number]");
@@ -223,11 +226,20 @@
     try {
       storage=localStorage.getItem("datein");
     } catch(err) {
-      isStorageSupport= false; 
+      isStorageSupport= false;
     }
+
+
     link.addEventListener("click", function(evt) {
       evt.preventDefault();
-      popup.classList.add("request-form-show");
+
+      // Чтобы открывать/закрывать окно формы при повторном нажатии на кнопку поиска гостиницы нужно
+      // воспользоватьс функцией toggle
+
+
+      // popup.classList.add("request-form-show");
+
+      popup.classList.toggle("request-form-show");
       if (storage) {
         datein.value = storage;
         dateout.focus(); }
@@ -235,12 +247,20 @@
           datein.focus();
         }
     });
-    close.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      popup.classList.remove("request-form-show");
-      popup.classList.remove("request-form-error");
-    });
-    form.addEventListener("submit", function(evt) {
+
+
+
+    // Событие по нажатию на крестик в данном макете Вамм не нужно. Крестика нет, форма открывается и закрывается по нажатию на ссылку "Поииск гостиницы в Седоне"
+
+    // close.addEventListener("click", function(evt) {
+    //   evt.preventDefault();
+    //   popup.classList.remove("request-form-show");
+    //   popup.classList.remove("request-form-error");
+    // });
+
+
+
+    popup.addEventListener("submit", function(evt) {
       if (!datein.value || !dateout.value || !adults.value || !childs.value) {
         evt.preventDefault();
         popup.classList.remove("request-form-error");
