--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       <div class="request-map">
         <h2 class="visually-hidden">Как нас найти</h2>
         <p class="request-map active-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13093.943207516195!2d-111.76627854447771!3d34.86914543572576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YHQtdC00L7QvdCwINGD0LjQvdGB0LvQvtCy!5e0!3m2!1sru!2sua!4v1522359794383" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af04b9f6176827c044336639676f4db5388d43e01c1143344594cd863c147e090&amp;width=1202&amp;height=593&amp;lang=ru_RU&amp;scroll=true"></script>
+          <!--<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13093.943207516195!2d-111.76627854447771!3d34.86914543572576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YHQtdC00L7QvdCwINGD0LjQvdGB0LvQvtCy!5e0!3m2!1sru!2sua!4v1522359794383" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>-->
           <img class="map-image" src="img/mapjpg.jpg" width="1200" height="593" alt="Карта">
         </p>
         <form class="request-form" action="https://echo.htmlacademy.ru" method="post">
