--- a/catalog.html
+++ b/catalog.html
@@ -115,13 +115,15 @@
 		<ul class="sorting-active">
 			<li><a class="sorting-active-up" href="#">
 					<span class="visually-hidden">По возрастанию</span>
-					<img src="img/icon-up-dir.svg" alt="Список по возрастанию">
+			<!--		<img src="img/icon-up-dir.svg" alt="Список по возрастанию">-->
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" opacity="0.3" d="M5.5 0L0 10h11z"/></svg>
 				</a>
 			</li>
 
 			<li><a class="sorting-price-down" href="#">
 					<span class="visually-hidden">По убыванию</span>
-					<img src="img/icon-down-dir.svg" alt="Список по убыванию">
+				<!--	<img src="img/icon-down-dir.svg" alt="Список по убыванию">-->
+					<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#81b3d2" d="M5.5 10L0 0h11"/></svg>
 				</a>
 			</li>
 		</ul>
