Вот чего я достиг в каталоге

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
     <section class="advantages">
       <h2 class="visually-hidden">Преимущества</h2>
-      <p class="advantages-title">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+      <p class="advantages-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="advantages-subtitle">Рассмотрим 5 причин, по которым Седона стала круче, чем Гранд Каньон!</p>
 
       <ul class="advantages-list">
 
         <li class="advantages-item advantages-significant">
           <div class="significant-point">
-            <h3 class="advantages-item-heading">Настоящий<br> городок</h3>
-            <p>Седона не аттракцион для туристов,<br> там течет своя жизнь</p>
+            <h3 class="advantages-item-heading">Настоящий городок</h3>
+            <p>Седона не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <div class="significant-image">
             <img src="img/city.jpg" width="800" height="401" alt="Фото города">
@@ -59,41 +59,41 @@
         </li>
         <li class="advantages-item advantages-significant significant-revers">
           <div class="significant-point">
-            <h3 class="advantages-item-heading">Там есть<br> мост дьявола</h3>
-            <p>Да, по нему можно пройти! Если <br>конечно вы осмелитесь</p>
+            <h3 class="advantages-item-heading">Там есть мост дьявола</h3>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </div>
           <div class="significant-image">
             <img src="img/diabolo.jpg" width="800" height="401" alt="Фото моста">
           </div>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-item-heading">Небольшая<br> площадь</h3>
-          <p>Все достопримечательности<br> находятся очень близко</p>
+          <h3 class="advantages-item-heading">Небольшая площадь</h3>
+          <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-item-heading">Красивая<br> дорога</h3>
-          <p>Ехать в Седону из Лас-Вегаса совсем<br> не скучно</p>
+          <h3 class="advantages-item-heading">Красивая дорога</h3>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно</p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-item-heading">Мало<br> туристов</h3>
-          <p>Большинство едет в Гранд Каньон и<br> толпится там</p>
+          <h3 class="advantages-item-heading">Мало туристов</h3>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
         <li class="advantages-item more-advantages-wrapper">
           <ul class="more-advantages">
             <li class="advantages-item more-advantages-item">
               <img src="img/icon-1.svg" alt="Домик">
               <h3 class="advantages-item-heading">Жилье</h3>
-              <p>Рекомендуем пожить в настоящем<br> мотеле, все как в кино!</p>
+              <p>Рекомендуем пожить в настоящем, все как в кино!</p>
             </li>
             <li class="advantages-item more-advantages-item">
               <img src="img/icon-3.svg" alt="Гамбургер">
               <h3 class="advantages-item-heading">Еда</h3>
-              <p>Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+              <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages-item more-advantages-item">
               <img src="img/icon-2.svg" alt="Подарок">
               <h3 class="advantages-item-heading">Сувениры</h3>
-              <p>Не только китайского, но и местного<br> производства!</p>
+              <p>Не только китайского, но и местного производства!</p>
             </li>
           </ul>
         </li>
@@ -102,14 +102,13 @@
     <section class="request">
       <div class="request-offer">
         <h2>Заинтересовались?</h2>
-        <p class="request-info">Укажите предполагаемые даты поездки<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="request-info">Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       </div>
       <a class="request-hotel-button" href="#">Поиск гостиницы в Седоне</a>
       <div class="request-map">
         <h2 class="visually-hidden">Как нас найти</h2>
         <p class="request-map active-map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af04b9f6176827c044336639676f4db5388d43e01c1143344594cd863c147e090&amp;width=1202&amp;height=593&amp;lang=ru_RU&amp;scroll=true"></script>
-          <!--<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13093.943207516195!2d-111.76627854447771!3d34.86914543572576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YHQtdC00L7QvdCwINGD0LjQvdGB0LvQvtCy!5e0!3m2!1sru!2sua!4v1522359794383" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13093.943207516195!2d-111.76627854447771!3d34.86914543572576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YHQtdC00L7QvdCwINGD0LjQvdGB0LvQvtCy!5e0!3m2!1sru!2sua!4v1522359794383" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
           <img class="map-image" src="img/mapjpg.jpg" width="1200" height="593" alt="Карта">
         </p>
         <form class="request-form" action="https://echo.htmlacademy.ru" method="post">
