--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li class="advantages-item advantages-significant significant-revers">
           <div class="significant-point">
             <h3 class="advantages-item-heading">Там есть<br> мост дьявола</h3>
-            <p>Да, по нему можно пройти! Если<br> конечно вы осмелитесь</p>
+            <p>Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
           </div>
           <div class="significant-image">
             <img src="img/diabolo.jpg" width="800" height="401" alt="Фото моста">
@@ -83,7 +83,7 @@
             <li class="advantages-item more-advantages-item">
               <img src="img/icon-1.svg" alt="Домик">
               <h3 class="advantages-item-heading">Жилье</h3>
-              <p>Рекомендуем пожить в настоящем,<br> все как в кино!</p>
+              <p>Рекомендуем пожить в настоящем,<br>мотеле все как в кино!</p>
             </li>
             <li class="advantages-item more-advantages-item">
               <img src="img/icon-3.svg" alt="Гамбургер">
@@ -145,7 +145,7 @@
               </div>
             </div>
             <div class="request-item">
-              <label for="request-child">Дети:</label>
+              <label class="request-child" for="request-child">Дети:</label>
               <div class="input-wrapper">
                 <input id="request-child" type="text" name="childs-number" value="" placeholder="0">
                 <button type="button remove-button" class="request-people">
